@@ -20,6 +20,7 @@ aTunes 2.2.0
 - Added player menu with key shortcuts to playback action
 - New remote commands to control application from a telnet session [ patch by Radovan ]
 - Custom playlist file format to load and save, keeps elements relative to repository so can be shared across different computers with different repository location
+- "Create playlist with top tracks" action added to repository navigation view
 - FIX: Use last.fm API to obtain last.fm loved tracks
 - FIX: Detection of radio audio streams blocks playing
 
